<resources>
    <string name="app_name">Qorum</string>
    <string name="geo_api_key">"AIzaSyDch9p5Xem6KHyIw6Fj8dxdzjvkn5mFJE0"</string>
    <string name="menu_settings">Settings</string>
    <string name="closing_tab">Closing Tab</string>
    <string name="route_error">Could not load Uber for selected route. Please check route points.</string>
    <string name="error_no_first_name">Please enter your first name.\n</string>
    <string name="error_no_last_name">Please enter your last name.\n</string>
    <string name="error_no_photo">Please choose your photo.</string>
    <string name="error_no_gender">Please choose a gender.\n</string>
    <string name="error_no_password">Please enter a password.\n</string>
    <string name="error_no_birthday">Please let us know your birth date.\n</string>
    <string name="error_no_phone">Please let us know your phone number.\n</string>
    <string name="error_bad_email">Please enter your valid email address.\n</string>
    <string name="error_email_in_use">That email address is already in use.</string>
    <string name="error_age_not_valid">We could not log you in:\nYou can\'t log in to this app or website because you do not meet the requirements for country, age or other criteria</string>
    <string name="error_invalid_credentials">That password does not match that email address.</string>
    <string name="error_location_rationale">Location permissions are required for Qorum.</string>
    <string name="error_bluetooth_rationale">Bluetooth permissions are required for Qorum.</string>
    <string name="error_bluetooth_not_available">Bluetooth module hasn\'t been detected on your device. The function of the auto-open tab will be run with the GPS-module.</string>
    <string name="error_bluetooth_not_enabled">Please, enable Bluetooth access</string>
    <string name="enable_bluetooth_screen_message">Enable Bluetooth, so Qorum can automatically open your tab when you enter the venue and close your tab when you leave.</string>
    <string name="error_location_denied">Sorry, this app cannot be used without the Location permission.</string>
    <string name="error_camera_rationale">The camera permission is necessary to take your picture.</string>
    <string name="error_storage_rationale">Reading from the external storage is necessary to retrieve access your new image.</string>
    <string name="error_camera_denied">Unable to take your picture without access to the camera.</string>
    <string name="error_no_drinks">How many drinks did you have?\n</string>
    <string name="error_no_rating">Please press thumbs up or thumbs down.\n</string>
    <string name="validation_error">Validation failed.\n</string>
    <string name="server_error">Unknown error</string>
    <string name="error_no_share_url">Sorry, there are currently no available referral links.</string>
    <string name="internet_error">Your device is not connected to the internet. Please check your cell phone signal and/or wi-fi connection to continue using Qorum.</string>
    <string name="promotion_mark">USING QORUM DOES NOT GUARANTEE\nADMISSION TO VENUE</string>
    <string name="add_profile_picture_TAB_updating"> Add a profile picture so the bartenders can update your tab. </string>
    <string name="add_picture">ADD PICTURE</string>
    <string name="something_wrong">Something went wrong!</string>
    <string name="something_wrong_message">We were unable to open your tab due to a POS system issue. Please wait while we try again.</string>
    <string name="something_wrong_notification">We were unable to open your tab due to a POS\nsystem issue.</string>
    <string name="beacon_auto_open_tab" formatted="false">You\’ve been automatically checked into %s.</string>
    <string name="beacon_auto_close_tab">Your tab has been closed. Please rate your experience in the Qorum app.</string>
    <string name="word_distance">DISTANCE</string>
    <string name="word_nearby">NEARBY</string>
    <string name="word_tips">INSIDE TIPS</string>
    <string name="word_features">FEATURES</string>
    <string name="word_hours">HOURS</string>
    <string name="word_name">NAME</string>
    <string name="word_discount">DISCOUNT</string>
    <string name="word_off">\u0020OFF</string>
    <string name="word_map">Map</string>
    <string name="word_list">List</string>
    <string name="word_checkin">Check in</string>
    <string name="word_male">Male</string>
    <string name="word_female">Female</string>
    <string name="word_closed">Closed</string>
    <string name="word_am">AM</string>
    <string name="word_pm">PM</string>
    <string name="word_login">Login</string>
    <string name="get_code">Get Code</string>
    <string name="update_password">Update Password</string>
    <string name="hint_email_address">Email Address</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_code">Code</string>
    <string name="hint_password">Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_firstName">Name</string>
    <string name="hint_lastName">Last Name</string>
    <string name="hint_birthdate">Birthday</string>
    <string name="hint_destination_address">Enter destination address</string>
    <string name="hint_zip_code">ZIP Code</string>
    <string name="hint_age">Age</string>
    <string name="hint_gender">Gender</string>
    <string name="title_choose_gender">Gender</string>
    <string name="button_sign_up_with_email">Sign up with email</string>
    <string name="button_submit">SUBMIT</string>
    <string name="button_share_love">SHARE THE LOVE</string>
    <string name="button_share_email">SHARE EMAIL</string>
    <string name="change_email_button">CHANGE EMAIL</string>
    <string name="location_reason_button">UPDATE MY SETTINGS</string>
    <string name="title_please_correct">Please correct:</string>
    <string name="title_fill_in_details">Complete Profile</string>
    <string name="phrase_log_in">Log in</string>
    <string name="phrase_already_signed_up">Already Signed up?</string>
    <string name="invalid_email_address">Please enter a valid email address</string>
    <string name="empty_email_address">Please enter your email address</string>
    <string name="invalid_phone_number">Please enter a valid phone number</string>
    <string name="empty_phone_number">Please enter your phone number</string>
    <string name="invalid_code">Please enter a valid code</string>
    <string name="wrong_code">Invalid Verification Code</string>
    <string name="verify_account_by_phone">Help us keep your account and Qorum safe by verifying your phone number:</string>
    <string name="verify_account_by_email">Help us keep your account and Qorum safe by verifying your email address:</string>
    <string name="verify_code_text">Enter Your Verification Code</string>
    <string name="menu_account">Account</string>
    <string name="menu_support">24/7 Support</string>
    <string name="menu_invite">Free Drinks</string>
    <string name="menu_payment">Payment</string>
    <string name="menu_logout">Log Out</string>
    <string name="navigation_logout">LOG OUT</string>
    <string name="default_payment">Default payment card</string>
    <string name="word_or_caps">OR</string>
    <string name="log_in">Log in</string>
    <string name="already_signed_up">Already Signed up?</string>
    <string name="need_profile_title">If we can\'t see you, we can\'t serve you</string>
    <string name="need_payment_message">Please add a credit card to open your bar tab and enjoy your Qorum discount.</string>
    <string name="close_tab_without_card_error">Error. Application need your credit card\'s data to close current tab.</string>
    <string name="need_profile_message">Qorum needs to capture a clear profile picture so that our bars can identify you and properly apply your discount.</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password">Password Reset</string>
    <string name="reset_instructions">
        Enter your email address and new password. Press the Get Code button then check your email
        for a Code from us. Enter it into the Code prompt then press the Update Password button.
    </string>
    <string name="oh_no">Oh no!</string>
    <string name="location_blocker_text">Qorum isn\'t available at your location quite yet. Share your email, and we\'ll let you know when we go live in your city.</string>
    <string name="facebook_app_id">1670534059850817</string>
    <string name="facebook_login_error">Facebook Login Error</string>
    <string name="menu_order_by_app_not_available">Qorum doesn\'t do in-app ordering. We want you to have fun and talk to strangers - not order from your little screen.</string>
    <string name="view_menu">VIEW MENU</string>
    <string name="zendesk_url">https://qorumhelp.zendesk.com</string>
    <string name="share_the_love">Share the love. Give free drinks</string>
    <string name="share_drinks_message">Invite 3 friends to join Qorum.\nEnjoy a free drink at any Qorum bar\nwhen they use the app. Cheers!</string>
    <string name="share_drinks_line4">($10 maximum - let\'s no get carried away)</string>
    <string name="share_drinks_terms_and_cond">Terms &amp; Conditions</string>
    <string name="share_drinks_invites_completed">Invites Accepted</string>
    <string name="share_drinks_free_drinks_waiting">Free Drinks Waiting</string>
    <string name="share_drinks_friends_checked_in">Friends Who Checked In</string>
    <string name="update">UPDATE</string>
    <string name="info_account_verification">Before you invite your friends please verify your account.</string>
    <string name="phone_verification">VERIFY ACCOUNT BY PHONE</string>
    <string name="mail_verification">VERIFY ACCOUNT BY MAIL</string>
    <string name="add_profile_photo">Add a new profile photo</string>
    <string name="import_from_facebook">Import from Facebook</string>
    <string name="choose_from_library">Choose from library</string>
    <string name="take_photo">Take a photo</string>
    <string name="calendar_day">DD</string>
    <string name="calendar_month">MM</string>
    <string name="calendar_year">YYYY</string>
    <string name="cancel">CANCEL</string>
    <string name="got_it">GOT IT</string>
    <string name="initial_check_age_title">You must be at least 21 years old\nto join Qorum. Please enter your date\nof birth below.</string>
    <string name="initial_check_age_reason">Your DOB must match your ID\nat Qorum bars.</string>
    <string name="let_me_in">LET ME IN</string>
    <string name="slash">/</string>
    <string name="first_name">FirstName</string>
    <string name="last_name">LastName</string>
    <string name="birth_date">BirthDate</string>
    <string name="gender">Gender</string>
    <string name="mail">Mail</string>
    <string name="number">Number</string>
    <string name="re_enter_zip_code">RE-ENTER ZIP CODE</string>
    <string name="time_to_update">Time to Update!</string>
    <string name="time_to_update_message">Looks like you\'ve got an out-dated version of the Qorum app.</string>
    <string name="time_to_update_submessage">Please go to the app store and update to the latest version to get all the new features and bug fixes to keep your app running smoothly.</string>
    <string name="qa_mode_log_title">Local logs</string>
    <string name="qa_mode_three_dots">- … -</string>
    <string name="qa_mode_logs_def_file_name">BACKGROUND_RANGING.txt</string>
    <string name="qa_mode_logs_def_path">sdcard/</string>
    <string name="qa_mode_logs_path">Path to file</string>
    <string name="qa_mode_logs_file_name">File Name</string>
    <string name="qa_mode_logs_clear">Clear logs</string>
    <string name="qa_mode_logs_save">Save</string>
    <string name="qa_mode_logs_restore">Restore</string>
    <string name="use_real_uber_api">Use real Uber API</string>
    <string name="word_on">ON</string>
</resources>