<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dip10"
    android:background="@drawable/shape_qa_mode_card">

    <TextView
        android:id="@+id/qa_log_title"
        style="@style/text_16_white_montserrat_light"
        android:textStyle="bold"
        android:text="@string/qa_mode_log_title"/>

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/log_activation_switcher"
        style="@style/wrap"
        android:layout_gravity="end"/>

    <TextView
        android:id="@+id/qa_mode_logs_expand_view"
        style="@style/text_16_white"
        android:text="@string/qa_mode_three_dots"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:paddingTop="@dimen/dip16"/>

    <LinearLayout
        android:id="@+id/qa_mode_logs_expand_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/dip24"
        android:visibility="gone">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/qa_mode_logs_path_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dip44"
            android:layout_margin="@dimen/dip10"
            android:textColorHint="@color/color_828691"
            android:background="@drawable/square_dark_blue"
            style="@style/email_phone_verification"
            android:hint="@string/qa_mode_logs_path">

            <EditText
                android:id="@+id/qa_mode_logs_path_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/dip10"
                android:paddingStart="@dimen/dip10"
                android:gravity="start|center"
                android:inputType="text"
                android:focusable="true"
                android:textSize="@dimen/sp16"
                android:fontFamily="@font/montserrat_regular"
                android:background="@android:color/transparent"
                android:text="@string/qa_mode_logs_def_file_name"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/qa_mode_logs_file_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dip44"
            android:layout_margin="@dimen/dip10"
            android:textColorHint="@color/color_828691"
            android:background="@drawable/square_dark_blue"
            style="@style/email_phone_verification"
            android:hint="@string/qa_mode_logs_file_name">

            <EditText
                android:id="@+id/qa_mode_logs_file_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/dip10"
                android:paddingStart="@dimen/dip10"
                android:gravity="start|center"
                android:maxLines="1"
                android:maxLength="22"
                android:inputType="text"
                android:focusable="true"
                android:textSize="@dimen/sp16"
                android:fontFamily="@font/montserrat_regular"
                android:background="@android:color/transparent"
                android:text="@string/qa_mode_logs_def_path"/>

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/qa_mode_logs_clear"
                style="@style/small_app_button"
                android:text="@string/qa_mode_logs_clear"/>
            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/qa_mode_logs_reset"
                style="@style/small_app_button"
                android:text="@string/qa_mode_logs_restore"
                android:visibility="gone"/>
            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/qa_mode_logs_save"
                style="@style/small_app_button"
                android:text="@string/qa_mode_logs_save"
                android:visibility="gone"/>

        </LinearLayout>

    </LinearLayout>

    <me.zhanghai.android.materialprogressbar.MaterialProgressBar
        android:id="@+id/progress"
        style="@style/circle_material_progress_bar"
        android:layout_gravity="center"
        android:visibility="gone"/>

</FrameLayout>