<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_account_verification"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dip224"
    android:layout_alignParentBottom="true"
    android:paddingStart="@dimen/dip16"
    android:paddingEnd="@dimen/dip16"
    android:paddingBottom="@dimen/dip33"
    android:visibility="visible">

    <TextView
        android:id="@+id/account_verification_info"
        style="@style/text_12"
        android:text="@string/info_account_verification"
        android:textColor="@color/color_59ffffff"
        android:fontFamily="@font/montserrat_regular"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/phone_verification"
        android:text="@string/phone_verification"
        style="@style/verify_account_buttons" />

    <TextView
        android:id="@+id/mail_verification"
        android:text="@string/mail_verification"
        style="@style/verify_account_buttons" />

</LinearLayout>